tests/ui/parser/better-expected.rs
fn main() {
    let x: [isize 3]; //~ ERROR expected `;` or `]`, found `3`
}

// ferrocene-annotations: fls_uj0kpjwyld60
// Array Types
